Add OAuth2Authorization support, update EmailVerificationPage, change logic responding for sending EmailVerificationToken